# T.O.A.D

./: .gitignore  AGENT-COMMUNICATION-REVERSE-ENGINEERING-NOTES.md  CHANGELOG.md  HANDOFF-2026-05-04-IDE-PHASE-2.md  HANDOFF-NEXT-AGENT.md  PROJECT.md  README.md  RELEASE.md  TOAD-STAGED-REVERSE-ENGINEERING-AND-REBUILD-PLAN.md  implementation_plan.md  package-lock.json  package.json  restart-desktop.bat  restart-dev.bat  start-desktop.bat  start-dev.bat
TOAD_WEBSITE/: README.md  index.html  package-lock.json
docs/: ARCHITECTURE.md  ENGINE.md  SCREENSHOTS.md
notes/: deferred-decisions.md
scripts/: capture-demo-screenshots.mjs  capture-screenshots.mjs  captureEventNarrationGoldens.mjs  captureTimelineCompositionGolden.mjs  demo-agent-runtime.mjs  demo-record-tauri.mjs  demoVideoTools.mjs  dev-api-server.mjs  generate-api-token.mjs  run-test-suites.mjs  test-suites.txt
test/: apiServer.test.js  approvalBroker.test.js  authPreflight.credsContract.test.js  authPreflight.decision.test.js  authPreflight.refreshOnce.test.js  broker.test.js  brokerSubscribe.test.js  buildRemoteMergePolicy.test.js  claudeCliSmoke.test.js  claudeExtractor.test.js  claudeSettingsWriter.test.js  codexExtractor.test.js  compactionHandler.test.js  compactionTrigger.purity.test.js  compactionTrigger.shouldCompact.test.js  compactionTrigger.test.js  contextUsage.getContextUsage.test.js  (+68 more)
toad-local/ui/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
toad-local/ui/src-tauri/capabilities/: default.json
toad-local/ui/src-tauri/icons/: README.md  icon.icns
toad-local/ui/src-tauri/src/: main.rs
(+945 files in other folders)
